<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- app strings -->
    <string name="app_name">Zeeguu Translate</string>
    <string name="menu_login_button">Login</string>

    <!-- sliding menu strings -->
    <string name="action_settings">Settings</string>
    <string name="search_menu">Search</string>
    <string name="mywords_menu">My Words</string>

    <!-- fragment strings -->
    <string name="search_text_title">Text search</string>
    <string name="mywords_title">The words you learned</string>
    <string name="mywords_empty">You do not have any words in your library yet, please log in or save your words to retrieve them.</string>
    <string name="mywords_delete_bookmark">Delete</string>
    <string name="mywords_expand">Expand list</string>
    <string name="mywords_collapse">Collapse list</string>
    <string name="mywords_refresh">Refresh list</string>

    <!-- Textview -->
    <string name="text_view_translate_button">Translate</string>

    <!-- sign in dialog strings -->
    <string name="dialog_sign_in_title">Sign In</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_cancel">Cancel</string>
    <string name="dialog_sign_in_message">You did not sign in yet, please do so to be able to connect to the server.</string>
    <string name="dialog_sign_in_no_account_message">No account yet? \n Click here!</string>

    <string name="enter_name">Name</string>
    <string name="button_create_account">Create Account</string>
    <string name="dialog_new_account_title">New account</string>
    <string name="dialog_new_account_message">You are going to create a new account, please enter the following information</string>
    <string name="dialog_new_account_sign_in_message">Have an account? \n Sign in here!</string>
    <string name="dialog_new_account_native_spinner">What is your native language?</string>
    <string name="dialog_new_account_learning_spinner">Which language do you want to improve?</string>

    <!-- preference tags  -->
    <string name="category_user_information">category_user_information</string>
    <string name="preference_email">EMAIL</string>
    <string name="preference_password">PASSWORD</string>
    <string name="preference_user_session_id">SESSIONID</string>
    <string name="preference_login">LOGIN</string>
    <string name="preference_app_design">APP_DESIGN</string>
    <string name="unknown">Unknown</string>
    <string name="preference_native_language">native_language</string> <!-- needs to be same tag as server URL -->
    <string name="preference_learning_language">learned_language</string> <!-- needs to be same tag as server URL -->

    <!-- preference YesNoDialog tags-->
    <string name="preference_logout">Logout</string>
    <string name="dialog_logout_confirmation">Are you sure you want to logout?</string>
    <string name="dialog_logout_button">Logout</string>


    <!-- bookmark tags  -->
    <string name="bookmark_url_code">android:zeeguu_app</string>
    <string name="bookmark_title">Android Application</string>

    <!-- setting strings -->
    <string name="title_activity_settings">Settings</string>
    <string name="category_login_settings">Zeeguu Account information</string>
    <string name="password_info">Please enter your password here</string>
    <string name="email_info">You are not logged in yet</string>

    <string name="category_main_settings">Zeeguu Account Settings</string>
    <string name="learning_language">Language to learn</string>
    <string name="learning_language_dialog">Change the language you want to learn</string>

    <string name="native_language">Native Language</string>
    <string name="native_language_dialog">Change your native language</string>

    <string name="user_session_id">Used session ID</string>

    <string name="category_app_settings">App Settings</string>
    <string name="app_language">App Language</string>
    <string name="app_language_dialog">Change the language of the app</string>
    <string name="language_default">en</string>

    <!-- choosable languages  -->
    <string-array name="languages">
        <item>English</item>
        <item>Deutsch</item>
        <item>French</item>
        <item>Italian</item>
    </string-array>

    <string-array name="language_keys">
        <item>en</item>
        <item>de</item>
        <item>fr</item>
        <item>it</item>
    </string-array>

    <string name="app_design">Zeeguu Design</string>
    <string name="app_design_dialog">Change the design of the app</string>
    <string name="theme_default">AppThemeLightActionbarDark</string>

    <string-array name="themes">
        <item>Light</item>
        <item>Light/Dark</item>
        <item>Dark</item>
    </string-array>

    <string-array name="theme_keys">
        <item>AppThemeLight</item>
        <item>AppThemeLightActionbarDark</item>
        <item>AppThemeDark</item>
    </string-array>


    <!-- error messages  -->
    <string name="error_mic_search_not_supported">Ops! Your device does not support Speech to Text</string>
    <string name="error_change_learning_language_on_server_not_possible">Ops! There occurred an error, we could not change your learning language on the server. Do you have connection to the internet?</string>
    <string name="error_no_internet_connection">Ops! Your device is not connected to the internet</string>
    <string name="error_user_login_wrong">Ops! Your username or password is not correct</string>
    <string name="error_account_not_created">Ops! Account could not be created, please try later again</string>
    <string name="error_language_speaking_not_supported">Ops! The language you choose cannot be read</string>
    <string name="error_TTS_not_inititalized">Ops! There occurred a problem with the text to speech software. </string>
    <string name="error_bookmarked_already">Ops! It was already bookmarked, it cannot be done twice. </string>
    <string name="error_no_text_to_bookmark">Ops! One or both text fields are empty. Not possible to bookmark </string>
    <string name="error_no_text_to_read">Ops! There is no text that could be read. Please enter first the text and then try it again </string>
    <string name="error_refreshing_already_running">Ops! There is already one refreshing operation running </string>
    <string name="error_listpreference_array">ListPreference requires an entries array and an entryValues array which are both the same length</string>
    <string name="error_bookmark_delete">Ops! The bookmark could not be deleted. Please try later again.</string>
    <string name="error_user_logged_out">You have been logged out. Please enter again valid account information in the settings.</string>
    <string name="error_user_not_logged_in_yet">Please log in first before you use these functions</string>
    <string name="error_email_not_valid">Email address is not valid, please try again</string>
    <string name="error_unknown_error">Ops! An error has occurred. Please try again later</string>
    <string name="error_connection_error">Ops! There has been a problem with the connection to the server, please check if you are online and try it later again </string>
    <string name="error_same_language">Ops! You have two times the same language, please change one </string>
    <string name="error_userinfo_invalid">Ops! You have entered invalid or not complete user information, please try again </string>
    <string name="error_mywords_not_saved">Ops! An error has occurred with your local memory, your words have not been saved on your phone </string>
    <string name="error_mywords_not_loaded">Ops! An error has occurred with your local memory, could not load your words from your phone </string>


    <!-- success messages  -->
    <string name="successful_login">Successfully logged in</string>
    <string name="successful_language_native_changed">Successfully changed your native language on the server to: </string>
    <string name="successful_language_learning_changed">Successfully changed your learning language on the server to: </string>
    <string name="successful_text_copied">Text has been copied </string>
    <string name="successful_mywords_updated">Your Words have been updated </string>
    <string name="successful_bookmarked">Successful bookmarked </string>
    <string name="successful_bookmark_deleted">Bookmark deleted successfully! </string>

    <!-- tags  -->
    <string name="logging_tag">logging_zeeguu</string>



</resources>
