<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="@string/category_user_information"
        android:title="@string/category_login_settings">

        <EditTextPreference
            android:inputType="textEmailAddress"
            android:key="@string/preference_email"
            android:selectable="false"
            android:summary="@string/email_info"
            android:title="@string/email" />

        <Preference
            android:key="@string/preference_logout"
            android:summary="Logout from your Zeeguu Account"
            android:title="Logout" />

        <Preference
            android:key="@string/preference_login"
            android:summary="Connect with you Zeeguu Account"
            android:title="Login" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_app_settings"
        android:title="@string/category_app_settings">

        <ListPreference
            android:defaultValue="@string/language_default"
            android:dialogTitle="@string/app_language_dialog"
            android:entries="@array/languages"
            android:entryValues="@array/language_keys"
            android:key="app_language"
            android:title="@string/app_language" />

        <ListPreference
            android:defaultValue="@string/theme_default"
            android:dialogTitle="@string/app_design_dialog"
            android:entries="@array/themes"
            android:entryValues="@array/theme_keys"
            android:key="@string/preference_app_design"
            android:title="@string/app_design" />

    </PreferenceCategory>


</PreferenceScreen>